# synthology

./: .gitignore  .pre-commit-config.yaml  LICENSE  MATERIALIZATION_ANALYSIS.md  README.md  analyze-targets.sh  analyze_connectivity.py  data_structures.py  exp1-submit-all.sh  install-dlv-linux.sh  install-mvn.sh  jobscript.sh  paper.tex  pyproject.toml  reproduce_proof_bug.py  scratch_pr.py  scratch_refactor.py  summary.md  tasks.py  to-change-exp-23.md
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/: dependabot.yaml
.github/workflows/: devcontainer.yaml  linting.yaml  pre-commit-update.yaml  tests.yaml
apache-maven-3.9.13/: NOTE.txt
apps/KGVisualiser/: README.md  pyproject.toml
apps/KGVisualiser/src/kgvisualiser/: __init__.py  visualize.py
apps/LUBM/: README.md  pyproject.toml
apps/LUBM/src/lubm/: __init__.py  download_tbox.py  orchestrator.py  parse_to_csv.py  verify_reasoner.py
apps/OWL2Bench/: README.md  pyproject.toml
apps/OWL2Bench/src/owl2bench/: bfs.py  checking.py  diagnostics.py  exp3_parity_loop.py  exp3_parity_report.py  export_csv.py  generation.py  parsing.py  partitioning.py  pipeline.py
apps/RRN/: data.py  device.py  globals.py  pyproject.toml  test.py  train.py  tt_common.py
apps/RRN/configs/: config.yaml
apps/RRN/configs/data/dataset/: asp.yaml
apps/RRN/configs/hyperparams/: default.yaml
apps/RRN/configs/model/: default.yaml
apps/RRN/models/: batched.py  exact.py
apps/RRN/src/dataloading/: __init__.py  datamodule.py
apps/RRN/src/models/: __init__.py  rrn_module.py  rrn_net.py
apps/RRN/src/rrn/: __init__.py  test_checkpoint.py  train.py
apps/RRN/src/rrn/dataloading/: __init__.py  csv_reader.py  datamodule.py  dataset.py  schema.py
apps/RRN/src/rrn/models/: __init__.py  common.py  rrn_batched.py  rrn_common.py  rrn_exact.py  rrn_module.py  rrn_net.py  rrn_plus_mlp.py
apps/RRN/src/rrn/utils/: __init__.py  callbacks.py  preprocess.py  type_utils.py
apps/asp-generator/: convert_to_csv.py  family-tree.py  pyproject.toml
apps/asp_generator/: pyproject.toml
apps/asp_generator/ftdatagen/: __init__.py  __main__.py  generator.py
apps/asp_generator/src/: family-tree.py
apps/asp_generator/src/asp_generator/: __main__.py  adapter.py  config.py  convert_to_csv.py  family_tree.py  generator.py  person_factory.py
apps/data_reporter/: README.md  pyproject.toml
apps/data_reporter/src/data_reporter/: __init__.py  analyze.py  exp2_latest_baseline.py  exp3_latest_baseline.py  paper_plots.py  paper_tables.py
apps/fc_baseline/: README.md  pyproject.toml
apps/fc_baseline/src/fc_baseline/: __init__.py  create_data.py
apps/ont_generator/: CONFIGURATION_REFERENCE.md  README.md  pyproject.toml  validator.py
apps/ont_generator/src/: chainer.py  create_data.py  generate.py  negative_sampler.py  parse.py  validator.py
apps/ont_generator/src/ont_generator/: chainer.py  compare_topology.py  create_data.py  generate.py  negative_sampler.py  parse.py
apps/ont_generator/src/ont_generator/utils/: graph_visualizer.py  validator.py
apps/ont_generator/tests/: test_chainer.py  test_datagen.py  test_negative_sampler.py  test_optimization.py  test_parse.py
apps/rafm_baseline/: README.md  pyproject.toml
apps/ubm_baseline/: README.md  pyproject.toml
apps/udm_baseline/: README.md  pyproject.toml
configs/: sweep_sample.yaml
configs/asp-generator/: family-tree.yaml
configs/asp_generator/: config.yaml
configs/data_reporter/: config.yaml  exp2_baseline_reasoner_trial.yaml  exp2_compare.yaml  exp3_compare.yaml
configs/experiments/: exp2_balance_hpc.yaml  exp2_balance_smoke.yaml  exp2_sweep_hpc.yaml  exp3_hpc.yaml  exp3_small.yaml  exp3_smoke.yaml
configs/fc_baseline/: config.yaml  exp2_baseline.yaml  exp3_baseline.yaml
configs/kgvisualiser/: config.yaml
configs/lubm/: config.yaml  verify_reasoner.yaml
configs/ont_generator/: config.yaml  config_lubm_visualize.yaml  config_single_graph.yaml  config_visual_inspection.yaml  config_visualize.yaml  exp1_base.yaml  exp1_constrained.yaml  exp1_mixed.yaml  exp1_proof_based.yaml  exp1_random.yaml  exp1_test.yaml  exp1_test_proof_based.yaml  exp1_val.yaml  exp2_gold_test.yaml  exp2_synthology.yaml  exp2_synthology_smoke.yaml  exp2_val.yaml  exp3_synthology.yaml  exp3_synthology_small.yaml  exp3_synthology_smoke.yaml
configs/owl2bench/: config.yaml  config_small.yaml  config_smoke.yaml  config_toy.yaml
configs/rrn/: config.yaml  exp1_constrained_hpc.yaml  (+17 more)
experiments/: EXPERIMENT_GUIDELINES.md  PAPER_RUNBOOK.md  exp1.md  exp2.md  exp2exp3.md  exp3.md  visual-verification.md
jobscripts/: common.sh  exp1-generate-all.sh  exp1-generate-test.sh  exp1-generate-val.sh  exp1-regen-and-retest.sh  exp1-test-all.sh  exp1-test-constrained.sh  exp1-test-mixed.sh  exp1-test-proof-based-only.sh  exp1-test-proof-based.sh  exp1-test-random.sh  exp1-train-constrained.sh  exp1-train-mixed.sh  exp1-train-proof-based.sh  exp1-train-random.sh  exp2-balance-datasets.sh  exp2-generate-test.sh  exp2-generate-val.sh  exp2-parity-loop-overnight.sh  exp2-report-data.sh  exp2-sweep-targetcaps-seeds.sh  exp2-test-all.sh  exp2-train-baseline.sh  exp2-train-synthology.sh  exp3-analyze-latest-baseline.sh  exp3-balance-data.sh  exp3-balance-small-data.sh  exp3-generate-baseline.sh  exp3-generate-gold-test.sh  exp3-generate-small-baseline.sh  exp3-generate-smoke-synthology.sh  exp3-generate-smoke.sh  exp3-generate-synthology.sh  exp3-paper-visual-report.sh  exp3-report-and-analyze-small.sh  exp3-report-and-analyze.sh  exp3-small.sh  exp3-smoke.sh  exp3-train-baseline.sh  exp3-train-synthology.sh
matlab/: common.m  exp1_table.m  exp23_hop_distribution.m  exp3_runtimes.m  exp3_scalability.m  kulcolors.m  ontology_hop_theory.m  predicate_coverage.m  render_barchart.m
ontologies/: README.md
scripts/: add_config_headers.sh  analyze_ontology_hops.py  debug_rl_materialization.py  export_wandb_to_csv.py  list_multihop_inferred_facts.py  plot_wandb_to_latex.py  sweep_ont_rrn.py
tests/: reproduce_standardization.py  test_rrn_training.py  test_standardization.py
wandb/: settings
(+71 files in other folders)
