[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "synthology"
version = "0.0.1" # major.minor.patch
description = ""
authors = [
  { name = "Vincent Van Schependom", email = "vincent.van.schependom@gmail.com" },
]
license = { file = "LICENSE" }
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "invoke>=2.2.1",
    "loguru>=0.7.3",
    "pre-commit>=4.3.0",
    "rdflib>=7.5.0",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

# UV workspace configuration


# Optional dependency groups, which can be installed using:
#    uv sync --group dev
# To install all groups, use:
#    uv sync --all-groups
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "hydra-core>=1.3.0",
    "networkx>=3.0",
    "graphviz>=0.20",
    "tqdm>=4.66.0",
]

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[tool.uv.workspace]
members = [
    "apps/asp_generator",
    "apps/RRN",
    "apps/ont_generator",
]
