[project]
name = "kgvisualiser"
version = "0.1.0"
description = "Visualize one KG sample with base, inferred, and negative facts"
readme = "README.md"
authors = [
    { name = "Vincent Van Schependom", email = "vincent.van.schependom@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "graphviz>=0.20",
]

[project.scripts]
kgvisualiser = "kgvisualiser.visualize:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
