[project]
name = "lubm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vincent Van Schependom", email = "vincent.van.schependom@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
    "rdflib>=7.5.0",
]

[project.scripts]
lubm = "lubm:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
