[project]
name = "rrn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vincent Van Schependom", email = "vincent.van.schependom@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "hydra-core>=1.3.2",
    "python-dotenv>=1.2.1",
    "pytorch-lightning>=2.6.0",
    "rich>=14.2.0",
    "tensorboard>=2.20.0",
    "wandb>=0.24.2",
]

[project.scripts]
rrn = "rrn.train:train"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
