[project]
name = "ont_generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vincent Van Schependom", email = "vincent.van.schependom@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "graphviz>=0.21",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "networkx>=3.2.1",
    "rdflib>=7.5.0",
    "tqdm>=4.67.1",
]

[project.scripts]
ont_generator = "ont_generator:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
